--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@adminjs/express": "^6.1.1",
     "@adminjs/sequelize": "^4.1.1",
     "@adminjs/themes": "^1.0.1",
+    "@adminjs/upload": "^4.0.2",
     "adminjs": "^7.8.17",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
