added full functions

--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@adminjs/sequelize": "^4.1.1",
     "@adminjs/themes": "^1.0.1",
     "@adminjs/upload": "^4.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "adminjs": "^7.8.17",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "knex": "^3.1.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "react-json-view": "^1.21.3",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "swagger-jsdoc": "^6.2.8",
