--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "adminjs": "^7.8.17",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "multer": "^2.0.2",
