--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
+    "quill": "^2.0.3",
     "react-json-view": "^1.21.3",
+    "react-quill": "^2.0.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "swagger-jsdoc": "^6.2.8",
